# openjs

./: CMakeLists.txt  LICENSE  README.md  test.js  test1.js
src/: ast.h  codegen.cpp  defination.h  error-process.h  main.cpp  token.cpp  token.h  tokenizer.cpp  tokenizer.h
src/log/: ctime.h  log.cpp  log.h  time.h
